--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-7933650770519707~6165236951"/>
+
         <activity android:name=".splashscreen.SplashscreenActivity"
             android:theme="@style/SplashscreenTheme">
             <intent-filter>
