Change main colors and made a new logo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"/>
+
+        <receiver android:name=".services.NotificationReceiver" />
     </application>
 
 </manifest>
